--- a/package.json
+++ b/package.json
@@ -1,63 +1,64 @@
 {
-  "private": true,
-  "scripts": {
-    "dev": "npm run development",
-    "development": "mix",
-    "watch": "mix watch",
-    "watch-poll": "mix watch -- --watch-options-poll=1000",
-    "hot": "mix watch --hot",
-    "prod": "npm run production",
-    "production": "mix --production"
-  },
-  "devDependencies": {
-    "@babel/preset-react": "^7.16.7",
-    "@inertiajs/inertia": "^0.10.1",
-    "@inertiajs/progress": "^0.2.6",
-    "@prettier/plugin-php": "^0.17.6",
-    "@tailwindcss/forms": "^0.4.0",
-    "@tailwindcss/typography": "^0.5.0",
-    "@types/lodash": "^4.14.178",
-    "@types/react": "^17.0.38",
-    "@types/react-dom": "^17.0.11",
-    "@types/react-instantsearch-dom": "^6.12.1",
-    "@types/ziggy-js": "^1.3.0",
-    "autoprefixer": "^10.4.1",
-    "axios": "^0.21.4",
-    "browser-sync": "^2.27.7",
-    "browser-sync-webpack-plugin": "^2.3.0",
-    "laravel-mix": "^6.0.39",
-    "lodash": "^4.17.21",
-    "postcss": "^8.4.5",
-    "postcss-import": "^12.0.1",
-    "prettier": "^2.5.1",
-    "tailwindcss": "^3.0.8",
-    "ts-loader": "^9.2.6",
-    "typescript": "^4.5.4",
-    "webpack-livereload-plugin": "^1.2.0"
-  },
-  "dependencies": {
-    "@headlessui/react": "^1.4.2",
-    "@heroicons/react": "^1.0.5",
-    "@inertiajs/inertia-react": "^0.7.1",
-    "@typescript-eslint/eslint-plugin": "^5.11.0",
-    "algoliasearch": "^4.11.0",
-    "classnames": "^2.3.1",
-    "eslint": "^7.32.0",
-    "eslint-config-airbnb": "^19.0.4",
-    "eslint-plugin-react": "^7.28.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-hot-toast": "^2.1.1",
-    "react-instantsearch-dom": "^6.18.0",
-    "ziggy-js": "^1.4.2"
-  },
-  "prettier": {
-    "semi": true,
-    "singleQuote": true,
-    "tabs": false,
-    "tabWidth": 2,
-    "trailingComma": "all",
-    "printWidth": 80,
-    "arrowParens": "avoid"
-  }
+    "private": true,
+    "scripts": {
+        "dev": "npm run development",
+        "development": "mix",
+        "watch": "mix watch",
+        "watch-poll": "mix watch -- --watch-options-poll=1000",
+        "hot": "mix watch --hot",
+        "prod": "npm run production",
+        "production": "mix --production"
+    },
+    "devDependencies": {
+        "@babel/preset-react": "^7.16.7",
+        "@babel/core": "^7.0.0-0",
+        "@babel/plugin-proposal-object-rest-spread": "^7.0.0-0",
+        "@babel/plugin-syntax-dynamic-import": "^7.8.3",
+        "@babel/plugin-transform-runtime": "^7.15.8",
+        "@babel/preset-env": "^7.15.8",
+        "@inertiajs/inertia": "^0.10.1",
+        "@inertiajs/progress": "^0.2.6",
+        "@prettier/plugin-php": "^0.17.6",
+        "@tailwindcss/forms": "^0.4.0",
+        "@tailwindcss/typography": "^0.5.0",
+        "@types/lodash": "^4.14.178",
+        "@types/react": "^17.0.38",
+        "@types/react-dom": "^17.0.11",
+        "@types/react-instantsearch-dom": "^6.12.1",
+        "@types/ziggy-js": "^1.3.0",
+        "autoprefixer": "^10.4.1",
+        "axios": "^0.21.4",
+        "csstype": "^2.6.2",
+        "laravel-mix": "^6.0.39",
+        "lodash": "^4.17.21",
+        "postcss": "^8.4.5",
+        "postcss-import": "^12.0.1",
+        "prettier": "^2.5.1",
+        "tailwindcss": "^3.0.8",
+        "ts-loader": "^9.2.6",
+        "typescript": "^4.5.4",
+        "webpack": "^5.0.0",
+        "webpack-cli": "^4.9.1"
+    },
+    "dependencies": {
+        "@headlessui/react": "^1.4.2",
+        "@heroicons/react": "^1.0.5",
+        "@inertiajs/inertia-react": "^0.7.1",
+        "algoliasearch": "^4.11.0",
+        "classnames": "^2.3.1",
+        "react": "^17.0.2",
+        "react-dom": "^17.0.2",
+        "react-hot-toast": "^2.1.1",
+        "react-instantsearch-dom": "^6.18.0",
+        "ziggy-js": "^1.4.2"
+    },
+    "prettier": {
+        "semi": true,
+        "singleQuote": true,
+        "tabs": false,
+        "tabWidth": 4,
+        "trailingComma": "all",
+        "printWidth": 80,
+        "arrowParens": "avoid"
+    }
 }
